Fix z-index left sidebar

--- a/src/assets/styles/imports/modules/shared/_user-options.css
+++ b/src/assets/styles/imports/modules/shared/_user-options.css
@@ -4,4 +4,5 @@ body.sidebar-main .iq-sidebar {
 
 .iq-sidebar {
   top: var(--navbar-height);
+  z-index: 1100;
 }
